--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# environmental files
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# .env
 .env
 .env.local
 .env.development.local
@@ -9,7 +20,9 @@
 
 # misc
 .DS_Store
+/z_misc
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/z_misc
